--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -61,33 +61,73 @@
   "solutions": {
     "title": "Nossas Soluções",
     "subtitle": "Combinamos design de classe mundial com engenharia de ponta para entregar software que define o mercado.",
-    "aiDevelopment": "AI Development",
-    "webDevelopment": "Web Development",
-    "mobileDevelopment": "Mobile Development",
-    "fractionalCto": "Fractional CTO"
+    "webApplication": {
+      "title": "Aplicações Web",
+      "description": "Criamos aplicações web modernas e eficientes, focadas em alta performance, segurança e escalabilidade. Soluções pensadas para crescer junto com o seu negócio.",
+      "feature1": "Sistemas e serviços online sob medida",
+      "feature2": "Arquitetura escalável para acompanhar seu crescimento",
+      "feature3": "Alta disponibilidade e confiabilidade",
+      "feature4": "Segurança reforçada em todas as camadas"
+    },
+    "mobileApplication": {
+      "title": "Aplicações Mobile",
+      "description": "Desenvolvemos aplicativos modernos e intuitivos para iOS e Android, com foco em experiência do usuário, design de alta qualidade e desempenho impecável.",
+      "feature1": "Apps para iOS e Android",
+      "feature2": "Desenvolvimento nativo ou híbrido",
+      "feature3": "Experiência e interface de alta qualidade",
+      "feature4": "Integração com serviços e sistemas existentes"
+    },
+    "integrations": {
+      "title": "Integrações",
+      "description": "Conectamos sistemas e plataformas para tornar seus processos mais simples, rápidos e eficientes. Integramos ferramentas corporativas, como SharePoint, e transformamos fluxos complexos em soluções ágeis e bem estruturadas.",
+      "feature1": "Planejamento e estratégia tecnológica",
+      "feature2": "Apoio e mentoria para equipes internas",
+      "feature3": "Mapeamento e otimização de processos"
+    }
   },
   "careers": {
-    "title": "Carreiras",
-    "subtitle": "Junte-se ao nosso time",
+    "title": "Junte-se à Vime",
+    "subtitle": "Estamos construindo o futuro do software. Se você é apaixonado por criar produtos excepcionais, seu lugar é aqui.",
     "benefits": "Por que trabalhar conosco?",
     "openPositions": "Vagas Abertas",
-    "notFound": "Não encontrou?"
+    "notFound": "Não encontrou sua vaga?",
+    "notFoundDesc": "Estamos sempre procurando talentos excepcionais.",
+    "sendResume": "Envie seu Currículo",
+    "benefit1": {
+      "title": "Tecnologia de Ponta",
+      "description": "Trabalhe com as ferramentas mais modernas do mercado."
+    },
+    "benefit2": {
+      "title": "Cultura Colaborativa",
+      "description": "Ambiente onde todas as vozes são ouvidas e respeitadas."
+    },
+    "benefit3": {
+      "title": "Equilíbrio",
+      "description": "Valorizamos sua saúde mental e tempo fora do trabalho."
+    }
   },
   "contact": {
     "title": "Vamos conversar?",
     "subtitle": "Tem um projeto em mente ou quer saber mais sobre nossos produtos? Estamos prontos para ouvir você.",
     "email": "Email",
+    "emailValue": "contato@vimesistemas.com",
     "location": "Localização",
+    "locationValue": "Belo Horizonte, MG - Brasil",
+    "locationGlobal": "(Atendemos globalmente)",
     "socials": "Redes Sociais",
     "form": {
       "name": "Nome",
+      "namePlaceholder": "Seu nome",
       "email": "Email",
+      "emailPlaceholder": "seu@email.com",
       "subject": "Assunto",
+      "selectSubject": "Selecione um assunto",
       "message": "Mensagem",
+      "messagePlaceholder": "Como podemos ajudar?",
       "submit": "Enviar Mensagem",
       "newProject": "Novo Projeto",
       "productQuestion": "Dúvida sobre Produtos",
-      "careers": "Carreiras / Vagas",
+      "careersVacancies": "Carreiras / Vagas",
       "other": "Outro"
     }
   },
