feat: adicionar suporte a tradução no rodapé, atualizando textos e estrutura

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -132,6 +132,7 @@
     }
   },
   "footer": {
+    "tagline": "Technology Solutions.",
     "company": "Company",
     "solutions": "Solutions",
     "careers": "Careers",
