--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -132,6 +132,7 @@
     }
   },
   "footer": {
+    "tagline": "Soluções em Tecnologia.",
     "company": "Empresa",
     "solutions": "Soluções",
     "careers": "Carreiras",
